# Hug_C

./: CMakeLists.txt  README.md
Chap1/: 1.5.c  1.6.c
Chap2/: 2.8.1.c  2.8.2.c
Chap3/: 3.1.c  3.2.c  3.3.c  3.5.c  3.6.c  3.7.c
Chap4/: 4.11.c  4.12.c  4.5.c  4.9.c
Chap5/: 5.10.c  5.11.c  5.13.c  5.14.c  5.15.c  5.3.c  5.4.c  5.5.c  5.6.c  5.7.c  5.8.c  5.9.c
Chap6/: 6.1.c  6.13.c  6.14.c  6.15.c  6.2.c  6.3.c  6.4.c  6.5.c  6.6.c  6.8.c
