cmake_minimum_required(VERSION 3.19)

project(Hug_C C)

set(CMAKE_C_STANDARD 99)

add_executable(1.5 Chap1/1.5.c)
add_executable(1.6 Chap1/1.6.c)
add_executable(2.8.1 Chap2/2.8.1.c)
add_executable(2.8.2 Chap2/2.8.2.c)
add_executable(3.1 Chap3/3.1.c)
add_executable(3.2 Chap3/3.2.c)
add_executable(3.3 Chap3/3.3.c)
add_executable(3.5 Chap3/3.5.c)
add_executable(3.6 Chap3/3.6.c)
add_executable(3.7 Chap3/3.7.c)
add_executable(4.5 Chap4/4.5.c)
add_executable(4.9 Chap4/4.9.c)
add_executable(4.11 Chap4/4.11.c)
add_executable(4.12 Chap4/4.12.c)