cmake_minimum_required(VERSION 3.19)

project(Hug_C C)

set(CMAKE_C_STANDARD 99)

add_executable(1.5 Chap1/1.5.c)
add_executable(1.6 Chap1/1.6.c)
add_executable(2.8.1 Chap2/2.8.1.c)
add_executable(2.8.2 Chap2/2.8.2.c)
add_executable(3.1 Chap3/3.1.c)
add_executable(3.2 Chap3/3.2.c)
add_executable(3.3 Chap3/3.3.c)
add_executable(3.5 Chap3/3.5.c)
add_executable(3.6 Chap3/3.6.c)
add_executable(3.7 Chap3/3.7.c)
add_executable(4.5 Chap4/4.5.c)
add_executable(4.9 Chap4/4.9.c)
add_executable(4.11 Chap4/4.11.c)
add_executable(4.12 Chap4/4.12.c)
add_executable(5.3 Chap5/5.3.c)
add_executable(5.4 Chap5/5.4.c)
add_executable(5.5 Chap5/5.5.c)
add_executable(5.6 Chap5/5.6.c)
add_executable(5.7 Chap5/5.7.c)
add_executable(5.8 Chap5/5.8.c)
add_executable(5.9 Chap5/5.9.c)
add_executable(5.10 Chap5/5.10.c)
add_executable(5.11 Chap5/5.11.c)
add_executable(5.13 Chap5/5.13.c)
add_executable(5.14 Chap5/5.14.c)
add_executable(5.15 Chap5/5.15.c)
add_executable(6.1 Chap6/6.1.c)
add_executable(6.2 Chap6/6.2.c)
add_executable(6.3 Chap6/6.3.c)
add_executable(6.4 Chap6/6.4.c)
add_executable(6.5 Chap6/6.5.c)
add_executable(6.6 Chap6/6.6.c)
add_executable(6.8 Chap6/6.8.c)
add_executable(6.13 Chap6/6.13.c)
add_executable(6.14 Chap6/6.14.c)
add_executable(6.15 Chap6/6.15.c)